fix(section): ensure inputs always have minimal spacing
[COM-479]

--- a/packages/vapor/scss/forms/block-form.scss
+++ b/packages/vapor/scss/forms/block-form.scss
@@ -85,7 +85,7 @@ form {
                 }
 
                 > *:not(:first-child) {
-                    margin-top: $scaledSpacing;
+                    margin-top: 0.5rem;
                 }
             }
             > .btn {
